add paginator to add_lecture & add_activity, split paginator & fixed_hyperlink code in plugin directory of styles and template

--- a/stucampus/static/styles/lecture/manage_lecture.css
+++ b/stucampus/static/styles/lecture/manage_lecture.css
@@ -14,3 +14,8 @@
     background-repeat: repeat-x;
     background-color: #98d98e;
 }
+.url{
+    display: block;
+    width: 100%;
+    text-align: center;
+}
