--- a/stucampus/templates/plugin/add_base.html
+++ b/stucampus/templates/plugin/add_base.html
@@ -10,7 +10,7 @@
         {{ 'global.js' | as_js }}
         {{ 'message-box.css' | as_css }}
 
-        {{ 'activity/add_base.css' | as_css }}
+        {{ 'plugin/add_base.css' | as_css }}
 
         {% block htmltitle %}
         {% endblock %}
@@ -18,7 +18,7 @@
         {% block htmlhead %}
         {% endblock %}
     </head>
-    <body>
+<body>
         <div class="container">
             <!-- 标题  Begin -->
             <div class="headline">讲座信息添加</div>
