--- a/stucampus/templates/lecture/add_lecture.html
+++ b/stucampus/templates/lecture/add_lecture.html
@@ -1,4 +1,4 @@
-{% extends 'activity/add_base.html' %}
+{% extends 'plugin/add_base.html' %}
 
 {% block htmltitle %}
 {% endblock %}
@@ -6,6 +6,7 @@
 {% block htmlhead %}
     {% load html_tools %}
     {{ 'lecture/add_lecture.css'|as_css }}
+    {{ 'plugin/fixed_hyperlink.css' | as_css }}
     <script>
         (function(){
             var status = {'success': 'doyoubi success'}
@@ -15,6 +16,12 @@
 {% endblock %}
 
 {% block content %}
+    <!-- 浮动链接  Begin -->
+    <div class="fixed">
+        <a class="fixed_link" href="{% url 'lecture:manage' %}">manage</a>
+        <a class="fixed_link" href="{% url 'lecture:index' %}">table</a>
+    </div>
+    <!-- 浮动链接  End -->
     <form id="add_lecture_form" action="{% url 'lecture:add_lecture' %}" method="POST">
         {% csrf_token %}
 
@@ -54,9 +61,9 @@
         <div id="url_id-tips" class="error-messages">
         </div>
 
-        <div class="chose_container">
-            <div class="chose check">已核{{ form.is_check }}</div>
-            <div class="chose delete">删除{{ form.is_delete }}</div>
+        <div class="choose_container">
+            <div class="choose check">已核{{ form.is_check }}</div>
+            <div class="choose delete">删除{{ form.is_delete }}</div>
         </div>         
         <div class="button"><input type="submit" value="submit" /></div>
     </form>
