--- a/stucampus/templates/lecture/add_lecture.html
+++ b/stucampus/templates/lecture/add_lecture.html
@@ -9,8 +9,9 @@
     {{ 'plugin/fixed_hyperlink.css' | as_css }}
     <script>
         (function(){
-            var status = {'success': 'doyoubi success'}
-            $S.ajaxForm($('#add_lecture_form'), {'status': status});
+            var status = { 'success': 'doyoubi success' };
+            var redirect = function(){ window.location.replace("../manage"); }
+            $S.ajaxForm($('#add_lecture_form'), {'status': status, 'redirect': redirect});
         })()
     </script>
 {% endblock %}
