--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -30,7 +30,7 @@
         <div class="header-container">
             <a href="/" title="深圳大学学子天地——荔园校园传媒资讯网" class="logo"></a>
             <ul class="nav">
-                <li><a href="/" class="selected">学子首页</a></li>
+                <li><a href="/">学子首页</a></li>
                 <li><a href="/news/">新闻资讯</a></li>
                 <li><a href="/infor">信息中心</a></li>
                 <li><a href="/magazine/szuyouth">校媒刊物</a></li>
