--- a/stucampus/static/styles/plugin/manage_base.css
+++ b/stucampus/static/styles/plugin/manage_base.css
@@ -52,12 +52,12 @@ body{
 .message_container{
     width: 840px;
     position: relative;
-    margin: 80px 30px 30px 30px;
+    margin: 60px 30px 10px 30px;
     overflow: hidden;
 }
 .input_list{
     width: 100%;
-    height: 50px;
+    height: 35px;
     position: relative;
     overflow: hidden;
     font-size: 0px;
@@ -69,35 +69,47 @@ body{
     float: left;
     margin-right: 10px;
     font-family: "Microsoft Yahei";
-    font-size: 24px;
+    font-size: 18px;
     color: #ffffff;
     text-align: center;
-    line-height: 50px;
+    line-height: 35px;
     vertical-align: middle;
 }
 .input_list input{
     width: 700px;
-    height: 30px;
+    height: 25px;
     position: relative;
-    margin: 8px 0 8px 0;
+    border: 0px;
+    margin: 5px 0 5px 0;
     float: left;
     font-family: "Microsoft Yahei";
-    font-size: 18px;
+    font-size: 14px;
     text-indent: 0.5em;
+}
+.url{
+    display: block;
+    width: 100px;
+    border: solid 2px #ffffff;
+    font-family: "Microsoft Yahei";
+    color:#ffffff;
+    font-size: 18px;
+    line-height: 150%;
+    text-decoration: none;
+    text-align: center;
+    margin: 5px auto;
 }
 .choose_container{
     width: 100%;
-    height: 30px;
+    height: 20px;
     position: relative;
-    margin-top: 20px;
     overflow: hidden;
 }
 .choose{
-    height: 30px;
+    height: 20px;
     font-family: "Microsoft Yahei";
-    font-size: 24px;
+    font-size: 18px;
     color: #ffffff;
-    line-height: 30px;
+    line-height: 20px;
     vertical-align: middle;
     position: absolute;
     top: 0px;
@@ -153,7 +165,7 @@ body{
 .message{
     width: 900px;
     position: relative;
-    margin-top: 50px;
+    margin-top: 25px;
     overflow: hidden;
 }
 .is_delete{
